--- a/content/posts/2003-02-09-my-laptop.md
+++ b/content/posts/2003-02-09-my-laptop.md
@@ -5,7 +5,7 @@ type: post
 date: 2003-02-09T23:35:58+00:00
 url: /2003/02/09/my-laptop/
 categories:
-  - Uncategorized
+  - nerd
 
 ---
 This is an [AnandTech review][1] of the Hypersonic Sonic Aviator 3.06GHz Pentium 4 laptop which is just another rebadge of the [Clevo][2] 5600. I bought mine (rebadged as a [Promedion][3]) a while back, but with a 2GHz P4 (Northwood) and a Radeon 7500 Mobility instead of a Radeon 9000 Mobility.
