Fix tags on some old posts

--- a/content/posts/2004-05-26-laptop-no-2.md
+++ b/content/posts/2004-05-26-laptop-no-2.md
@@ -6,6 +6,8 @@ date: 2004-05-26T16:23:56+00:00
 url: /2004/05/26/laptop-no-2/
 categories:
   - Uncategorized
+tags:
+  - new computer
 
 ---
 Once again, I&#8217;ve succumbed to my inner laptop-fanboy and ordered a new laptop. The previous one is now two years old and thoroughly out of date. Add to that its 3.7kg weight (on a good day) and its battery life which is somewhere between 1 and 1.5 hours (on that same good day), and it&#8217;s obvious that it&#8217;s time for a new one. Or so I rationalise, at least.
