Fix up figure tags up to 2013-01

--- a/content/posts/2001-02-27-1469.md
+++ b/content/posts/2001-02-27-1469.md
@@ -13,4 +13,4 @@ categories:
   - Uncategorized
 
 ---
-Yaaaay, my first weblog entry. Today I spent most of my time researching fast-marching methods (which I now more or less fully grasp) and level-set methods (which are related to fast-marching methods, but somewhat more involved, and thus these are taking me a bit longer to assimilate). Eventually, I&#8217;ll be juggling around a few hyper-surfaces to see how these methods fare on some of my more hairy data.
+Yaaaay, my first weblog entry. Today I spent most of my time researching fast-marching methods (which I now more or less fully grasp) and level-set methods (which are related to fast-marching methods, but somewhat more involved, and thus these are taking me a bit longer to assimilate). Eventually, I’ll be juggling around a few hyper-surfaces to see how these methods fare on some of my more hairy data.
