--- a/content/posts/2001-03-18-1472.md
+++ b/content/posts/2001-03-18-1472.md
@@ -13,4 +13,4 @@ categories:
   - Uncategorized
 
 ---
-I almost bought an Olympus C990Z (US: D490Z) yesterday, but the stupid shop didn&#8217;t have any in stock and I didn&#8217;t feel like haggling about the display model. This seems like a very solid 2MP camera and if reviews can be believed, its only con is that it doesn&#8217;t have USB. At the moment it&#8217;s between this and the KODAK DC3400, which also seems like a good buy and is even a bit cheaper than the Olympus.
+I almost bought an Olympus C990Z (US: D490Z) yesterday, but the stupid shop didn’t have any in stock and I didn’t feel like haggling about the display model. This seems like a very solid 2MP camera and if reviews can be believed, its only con is that it doesn’t have USB. At the moment it’s between this and the KODAK DC3400, which also seems like a good buy and is even a bit cheaper than the Olympus.
