--- a/content/posts/2001-04-05-1474.md
+++ b/content/posts/2001-04-05-1474.md
@@ -15,4 +15,4 @@ categories:
 ---
 Wheeeeeeee! The plugin system now has double the hair-raising ability. It does all kinds of cute things with plugin dependencies and object pools.
 
-Tomorrow (and Saturday) we&#8217;re having demos. That means no work will get done, especially since my workstation is going to be part of the frikking demonstration.
+Tomorrow (and Saturday) we’re having demos. That means no work will get done, especially since my workstation is going to be part of the frikking demonstration.
