--- a/content/posts/2001-04-30-1477.md
+++ b/content/posts/2001-04-30-1477.md
@@ -15,4 +15,4 @@ categories:
 ---
 Note to world: w3m still rules. I can use it to update via blogger.com (not even opera can do that) and when I edit my blog, w3m automatically opens my favourite text editor (jed, doh) to do this with.
 
-After quite a bit of work, I&#8217;ve fixed a bug in linux kernel 2.4.4 on the VT82C686A south bridge. The patch is submitted to the mailing list, so now hold thumbs that it appears in 2.4.5 (or something).
+After quite a bit of work, I’ve fixed a bug in linux kernel 2.4.4 on the VT82C686A south bridge. The patch is submitted to the mailing list, so now hold thumbs that it appears in 2.4.5 (or something).
