--- a/content/posts/2001-05-26-1479.md
+++ b/content/posts/2001-05-26-1479.md
@@ -14,6 +14,6 @@ categories:
   - Uncategorized
 
 ---
-Eeepe! I did forget that I had a blog&#8230; Also, it seems the blogspot server had some severe trouble, which would mean that my blog wasn&#8217;t accessible. What the heck, this blog has only one reader, and that&#8217;s me!
+Eeepe! I did forget that I had a blog… Also, it seems the blogspot server had some severe trouble, which would mean that my blog wasn’t accessible. What the heck, this blog has only one reader, and that’s me!
 
-I&#8217;ve been spending some time on blender (this is VERY well-done) and specifically with its IKA functionality.
+I’ve been spending some time on blender (this is VERY well-done) and specifically with its IKA functionality.
