--- a/content/posts/2001-05-28-2.md
+++ b/content/posts/2001-05-28-2.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-I&#8217;m reading everything I can get my hands on. It doesn&#8217;t really matter what it&#8217;s about, as long as it&#8217;s more or less interesting. I&#8217;ve reached a stage where it seems that I&#8217;ll need much more input before I can start yielding any kind of output again.
+I’m reading everything I can get my hands on. It doesn’t really matter what it’s about, as long as it’s more or less interesting. I’ve reached a stage where it seems that I’ll need much more input before I can start yielding any kind of output again.
