--- a/content/posts/2001-06-03-5.md
+++ b/content/posts/2001-06-03-5.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-I&#8217;ve built and uploaded DEBs of the new JED B0.99-14 release. This will be available in unstable soon, and then the BTS reports should start streaming in. Yaaay. I should also make the AA-font patch for this version of JED available soon.
+I’ve built and uploaded DEBs of the new JED B0.99-14 release. This will be available in unstable soon, and then the BTS reports should start streaming in. Yaaay. I should also make the AA-font patch for this version of JED available soon.
