--- a/content/posts/2001-06-04-kde-21.md
+++ b/content/posts/2001-06-04-kde-21.md
@@ -8,8 +8,8 @@ categories:
   - Uncategorized
 
 ---
-The KDE programming environment (APIs, documentation, conventions) is quite impressive. After having played around with konqueror (which is an impressive application in itself) I decided to have a glance at how KDE itself has progressed since I last had a quick look (1.x somewhere). It&#8217;s still a shame about the use of Qt. I know that this is a good library and that it&#8217;s free for the development of free software for X11, but that&#8217;s still not absolutely free.
+The KDE programming environment (APIs, documentation, conventions) is quite impressive. After having played around with konqueror (which is an impressive application in itself) I decided to have a glance at how KDE itself has progressed since I last had a quick look (1.x somewhere). It’s still a shame about the use of Qt. I know that this is a good library and that it’s free for the development of free software for X11, but that’s still not absolutely free.
 
-I have nothing against proprietary software (I&#8217;ve written a few lines myself) but for something like KDE it would have been nice if its use were entirely unrestricted, i.e. for the development of free and commercial software on any platform.
+I have nothing against proprietary software (I’ve written a few lines myself) but for something like KDE it would have been nice if its use were entirely unrestricted, i.e. for the development of free and commercial software on any platform.
 
-In spite of this, the KDE programming environment is still worth spending some time on, and so I will continue&#8230; :)
+In spite of this, the KDE programming environment is still worth spending some time on, and so I will continue… :)
