--- a/content/posts/2001-07-19-ltns.md
+++ b/content/posts/2001-07-19-ltns.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-Today was one of those &#8220;clean-your-very-large-monitor&#8221; days. My monitor is now clean and I must say that it&#8217;s a very nice monitor.
+Today was one of those “clean-your-very-large-monitor” days. My monitor is now clean and I must say that it’s a very nice monitor.
