--- a/content/posts/2002-01-09-hmmm.md
+++ b/content/posts/2002-01-09-hmmm.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-I shouldn&#8217;t be so harsh. I have a terribly exciting life. Really! BTW, long blogs are cooler.
+I shouldn’t be so harsh. I have a terribly exciting life. Really! BTW, long blogs are cooler.
