--- a/content/posts/2002-01-21-spie-bish.md
+++ b/content/posts/2002-01-21-spie-bish.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-The article is coming along at the speed of snot. That&#8217;s quite a bit faster than last week, I have to admit. Last week, it was more like very cold snot. At least I have good music to keep me company while I struggle through this.
+The article is coming along at the speed of snot. That’s quite a bit faster than last week, I have to admit. Last week, it was more like very cold snot. At least I have good music to keep me company while I struggle through this.
