--- a/content/posts/2002-03-07-mo-music.md
+++ b/content/posts/2002-03-07-mo-music.md
@@ -8,6 +8,6 @@ categories:
   - Uncategorized
 
 ---
-It would have been terribly useful if emusic.com had some facility for discussing the available music. I&#8217;ve discovered some jewels there (My Life with the Thrill Kill Kult for example) but I&#8217;ve had to work through quite an amount of audio. Hey, maybe I should mail them!
+It would have been terribly useful if emusic.com had some facility for discussing the available music. I’ve discovered some jewels there (My Life with the Thrill Kill Kult for example) but I’ve had to work through quite an amount of audio. Hey, maybe I should mail them!
 
-I&#8217;m adding the final touches to the camera-ready version of my IEEE VisSym 2002 article. This has to be done by tomorrow, and then the fun can begin with some messy TF domain image processing.
+I’m adding the final touches to the camera-ready version of my IEEE VisSym 2002 article. This has to be done by tomorrow, and then the fun can begin with some messy TF domain image processing.
