--- a/content/posts/2002-03-22-wheee.md
+++ b/content/posts/2002-03-22-wheee.md
@@ -8,6 +8,6 @@ categories:
   - Uncategorized
 
 ---
-self.ortho_pipes = [[{&#8216;vtkImageReslice&#8217;: vtkImageReslice(), &#8216;vtkPlaneSource&#8217; : vtkPlaneSource(), &#8216;vtkTexture&#8217; : vtkTexture()}] for i in range(3)]
+self.ortho_pipes = [[{‘vtkImageReslice’: vtkImageReslice(), ‘vtkPlaneSource’ : vtkPlaneSource(), ‘vtkTexture’ : vtkTexture()}] for i in range(3)]
 
 Python is da bomb.
