--- a/content/posts/2002-04-15-pwm.md
+++ b/content/posts/2002-04-15-pwm.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-Every so often, I go on a trying-different-window-managers spree. This time was more depressing than usual, since I&#8217;ve tried most of the X11 window managers that are out there, even [ion][1]. By the way, I liked ION very much and I think the idea behind it does have merit, but I use too many applications that don&#8217;t play nice with ion. So, this time I was very strongly considering becoming a [Pointless Window Manager][2] hermit and have people stare at me strangely. By the way, I still _am_ going to give PLWM a good shot, but later. It turns out that the author of ion, Tuomo Valkonen, wrote another window manager before getting the ion vision. This window manager is called [pwm][3] and it&#8217;s just what the doctor ordered&#8230;
+Every so often, I go on a trying-different-window-managers spree. This time was more depressing than usual, since I’ve tried most of the X11 window managers that are out there, even [ion][1]. By the way, I liked ION very much and I think the idea behind it does have merit, but I use too many applications that don’t play nice with ion. So, this time I was very strongly considering becoming a [Pointless Window Manager][2] hermit and have people stare at me strangely. By the way, I still _am_ going to give PLWM a good shot, but later. It turns out that the author of ion, Tuomo Valkonen, wrote another window manager before getting the ion vision. This window manager is called [pwm][3] and it’s just what the doctor ordered…
 
 _Everything_ can be controlled with hot keys and arbitrary windows can be tabbed together. Otherwise this is an extremely minimalist window manager. However, the little that it does is probably all that one actually needs from a window manager. So, for the moment I am happy again. At least until next week, when I begin scratching around for yet another window manager/desktop environment to play with.
 
