--- a/content/posts/2002-05-08-adsl-woei.md
+++ b/content/posts/2002-05-08-adsl-woei.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-That was really quick&#8230; I now have an ADSL connection to the oodles and oodles of bandwidth that the TU has lying around. :)
+That was really quick… I now have an ADSL connection to the oodles and oodles of bandwidth that the TU has lying around. :)
