--- a/content/posts/2002-05-17-grrr.md
+++ b/content/posts/2002-05-17-grrr.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-If it were up to some politicians, South Africa is not going to have a population to worry about in a few years time. The president&#8217;s (Thabo Mbeki&#8217;s) view on the AIDS / HIV link is disturbing and so is the racism with which he and some of his supporting members of state approach scientists who oppose them. Mbeki&#8217;s strong point has _never_ been his intellect; unfortunately he does not seem to realise this.
+If it were up to some politicians, South Africa is not going to have a population to worry about in a few years time. The president’s (Thabo Mbeki’s) view on the AIDS / HIV link is disturbing and so is the racism with which he and some of his supporting members of state approach scientists who oppose them. Mbeki’s strong point has _never_ been his intellect; unfortunately he does not seem to realise this.
 
 Read [this article][1], taking into account that News24, like most media mouthpieces, does not always sketch a completely objective picture.
 
