--- a/content/posts/2002-06-09-more-5600-info.md
+++ b/content/posts/2002-06-09-more-5600-info.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-I found [this posting][1] on [groups.google.com][2], bless its heart. It&#8217;s _very_ positive about the Clevo 5600 and mentions that it&#8217;s also marketed as the Fosa 5600, Prostar 5694 and the [Area 51 gaming laptop][3] by [AlienWare][4]. I&#8217;d been drooling about the Area 51 before, but at that time I didn&#8217;t know what the Clevo looked like, so I didn&#8217;t recognise it.
+I found [this posting][1] on [groups.google.com][2], bless its heart. It’s _very_ positive about the Clevo 5600 and mentions that it’s also marketed as the Fosa 5600, Prostar 5694 and the [Area 51 gaming laptop][3] by [AlienWare][4]. I’d been drooling about the Area 51 before, but at that time I didn’t know what the Clevo looked like, so I didn’t recognise it.
 
  [1]: http://groups.google.com/groups?hl=en&lr=&th=f35bcebdab1cc884&rnum=6
  [2]: http://groups.google.com/
