--- a/content/posts/2002-06-12-bliss.md
+++ b/content/posts/2002-06-12-bliss.md
@@ -8,9 +8,9 @@ categories:
   - Uncategorized
 
 ---
-I finally broke down and ordered that laptop: Promedion</a> ([Clevo][1]) 5600 with Northwood P4 1.8GHz CPU, 256MB DDR ram, 30G HDD, [64MB ATI Mobility Radeon 7500][2], 15&#8243; 1400&#215;1050 TFT, 3 year on-site.
+I finally broke down and ordered that laptop: Promedion ([Clevo][1]) 5600 with Northwood P4 1.8GHz CPU, 256MB DDR ram, 30G HDD, [64MB ATI Mobility Radeon 7500][2], 15″ 1400×1050 TFT, 3 year on-site.
 
-When I get the thing, which should be in a week or so, I&#8217;ll make sure to write up a detailed review and document the laptop&#8217;s transcendence to the next level of computer consciousness (i.e. the Linux installation). Fortunately I didn&#8217;t have to pay the Microf*ck tax (the forced inclusion of a Microslop OS) like with so many other mainstream notebooks.
+When I get the thing, which should be in a week or so, I’ll make sure to write up a detailed review and document the laptop’s transcendence to the next level of computer consciousness (i.e. the Linux installation). Fortunately I didn’t have to pay the Microf*ck tax (the forced inclusion of a Microslop OS) like with so many other mainstream notebooks.
 
  [1]: http://www.clevo.com.tw/
  [2]: http://www.ati.com/technology/hardware/mobilityradeon7500/index.html
