--- a/content/posts/2002-06-18-aaaack.md
+++ b/content/posts/2002-06-18-aaaack.md
@@ -8,10 +8,10 @@ categories:
   - Uncategorized
 
 ---
-Yes boys and girls, the bitch of a motherboard (MSI-694D dual FC-PGA) in my work machine went tits up last week. I never trusted the regulator on that thing: if the CPUs were under an oscillating load, one could see small fluctuations on the screen in time with the load. This was the case even when it was new, but do you think any of the suppliers took my complaints seriously? So, the regulator has finally gone bye-bye&#8230; I believe it&#8217;s just shit quality on the MSI-694D.
+Yes boys and girls, the bitch of a motherboard (MSI-694D dual FC-PGA) in my work machine went tits up last week. I never trusted the regulator on that thing: if the CPUs were under an oscillating load, one could see small fluctuations on the screen in time with the load. This was the case even when it was new, but do you think any of the suppliers took my complaints seriously? So, the regulator has finally gone bye-bye… I believe it’s just shit quality on the MSI-694D.
 
-I&#8217;ve ordered an ASUS CUV4X-D as a replacement. There isn&#8217;t such a huge selection of dual FC-PGA SDRAM boards anymore, but that&#8217;s to be expected. What this means is that nobody has it in stock, so I get to wait extra long for my replacement. Fortunately the board has a 3-year warranty on it: Let&#8217;s hope I never get to make use of it.
+I’ve ordered an ASUS CUV4X-D as a replacement. There isn’t such a huge selection of dual FC-PGA SDRAM boards anymore, but that’s to be expected. What this means is that nobody has it in stock, so I get to wait extra long for my replacement. Fortunately the board has a 3-year warranty on it: Let’s hope I never get to make use of it.
 
 The long and the short of the story is that my work has almost come to a standstill. My work machine was responsible for all my CVS repositories and a bunch of crucial other services. Fortunately I have local copies of everything, but it still feels strange working without CVS. Most of my other infrastructure is now sitting on machines dotted all around. This is not pleasant.
 
-My laptop should arrive any day now&#8230; timing timing timing!
+My laptop should arrive any day now… timing timing timing!
