--- a/content/posts/2002-07-17-news-flash-2.md
+++ b/content/posts/2002-07-17-news-flash-2.md
@@ -8,4 +8,5 @@ categories:
   - Uncategorized
 
 ---
-Those l33t Python scripts are now both available at <http://cpbotha.net/leet_scripts.html>.
+Those l33t Python scripts are now both available at <http: cpbotha.net="" leet_scripts.html="">.
+</http:>
