--- a/content/posts/2002-08-09-111437-up-43-days-2301-2-users-load-average-027-024-029.md
+++ b/content/posts/2002-08-09-111437-up-43-days-2301-2-users-load-average-027-024-029.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-It&#8217;s pure bliss when your workstation doesn&#8217;t need to reboot 43 times per day, but just keeps chugging along doing its job&#8230;
+It’s pure bliss when your workstation doesn’t need to reboot 43 times per day, but just keeps chugging along doing its job…
