--- a/content/posts/2002-11-26-yoohoo.md
+++ b/content/posts/2002-11-26-yoohoo.md
@@ -8,6 +8,6 @@ categories:
   - Uncategorized
 
 ---
-I&#8217;m back from an incredible holiday in good old ZA. Now I just have to survive my article deadline on Friday and then everything will be just dandy. Fortunately there&#8217;s [RantRadio][1] to keep my industrial ears happy.
+I’m back from an incredible holiday in good old ZA. Now I just have to survive my article deadline on Friday and then everything will be just dandy. Fortunately there’s [RantRadio][1] to keep my industrial ears happy.
 
  [1]: http://www.rantradio.com/
