--- a/content/posts/2002-12-04-status.md
+++ b/content/posts/2002-12-04-status.md
@@ -8,13 +8,12 @@ categories:
   - Uncategorized
 
 ---
-I&#8217;ve finally released post XFree86 4.2.99 merge DRI suspend/resume capable Radeon driver snapshots and the adapted patch. Get them fresh [here][1].
+I’ve finally released post XFree86 4.2.99 merge DRI suspend/resume capable Radeon driver snapshots and the adapted patch. Get them fresh [here][1].
 
 Our somewhat new real-time volume renderer, lovingly called the ShellSplatter, is more or less done. Look at the pretty pictures that it makes:
   
-<a href="http://cpbotha.net/thingies/shellsplat3.png" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title="">Semi-transparent rendering of human head arteries, with an aneurism!</a>
-  
-<a href="http://cpbotha.net/thingies/engineblockhq.png" data-rel="lightbox-image-1" data-rl_title="" data-rl_caption="" title="">Rendering of a CT-scan of an engine block, whoooo!</a>
+<a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/thingies/shellsplat3.png" title="">Semi-transparent rendering of human head arteries, with an aneurism!</a>
+<a data-rel="lightbox-image-1" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/thingies/engineblockhq.png" title="">Rendering of a CT-scan of an engine block, whoooo!</a>
 
 That will be all. Thank you Jeeves.
 
