--- a/content/posts/2001-03-27-1473.md
+++ b/content/posts/2001-03-27-1473.md
@@ -13,8 +13,8 @@ categories:
   - Uncategorized
 
 ---
-I&#8217;ve been busy, very busy. You can download an anti-aliasing patch for XJed by clicking [here][1] and you can get an idea of what XJed looks like with anti-aliased font-rendering <a href="http://cpbotha.net/screenshots/xjed-aa-20010326b.png" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title="">here</a>.
+I’ve been busy, very busy. You can download an anti-aliasing patch for XJed by clicking [here][1] and you can get an idea of what XJed looks like with anti-aliased font-rendering <a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/screenshots/xjed-aa-20010326b.png" title="">here</a>.
 
-Otherwise, the meetings just never stop. Fortunately they are interspersed with very interesting colloquia. Still, the net result of all this meeting and listening is that RealWork(tm) has to wait&#8230;
+Otherwise, the meetings just never stop. Fortunately they are interspersed with very interesting colloquia. Still, the net result of all this meeting and listening is that RealWork(tm) has to wait…
 
  [1]: http://cpbotha.net/jedstuff/patches/jed-B0.99-12-xrenderfont.patch
