--- a/content/posts/2001-04-16-1476.md
+++ b/content/posts/2001-04-16-1476.md
@@ -13,4 +13,4 @@ categories:
   - Uncategorized
 
 ---
-w3m rules! The sweetest little text-mode browser. See <a href="http://cpbotha.net/screenshots/w3m-ss-slashdot.jpg" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title="">slashdot</a> and <a href="http://cpbotha.net/screenshots/w3m-ss-ecfh.jpg" data-rel="lightbox-image-1" data-rl_title="" data-rl_caption="" title="">the ecfh homepage</a> as rendered by w3m in an xterm with anti-aliased font support.
+w3m rules! The sweetest little text-mode browser. See <a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/screenshots/w3m-ss-slashdot.jpg" title="">slashdot</a> and <a data-rel="lightbox-image-1" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/screenshots/w3m-ss-ecfh.jpg" title="">the ecfh homepage</a> as rendered by w3m in an xterm with anti-aliased font support.
