--- a/content/posts/2001-06-26-the-tip.md
+++ b/content/posts/2001-06-26-the-tip.md
@@ -8,8 +8,8 @@ categories:
   - Uncategorized
 
 ---
-I have an Abit KT7 motherboard. I like it, except for one little thing: for some or other reason, Abit chose to mount a non-ball-bearing fan on the Northbridge chipset heatsink. Now, if you&#8217;re going to put any kind of fan in a computer, make sure it&#8217;s a ball-bearing fan, as it&#8217;s probably going to be doing its thing 24 hours per day, 7 days a week.
+I have an Abit KT7 motherboard. I like it, except for one little thing: for some or other reason, Abit chose to mount a non-ball-bearing fan on the Northbridge chipset heatsink. Now, if you’re going to put any kind of fan in a computer, make sure it’s a ball-bearing fan, as it’s probably going to be doing its thing 24 hours per day, 7 days a week.
 
 In anycase, this fan of mine started making an awful noise a while ago and shortly after that stopped rotating quite as fast as it should have. Because of the guarantee, I was able to get a swap-out (i.e. a new motherboard).
 
-Well, it happened again. This time however, I did NOT feel like taking the whole computer in just to have the motherboard replaced (because of a FAN!); it&#8217;s a good vendor, but they&#8217;re kind of strict with their guarantee conditions. So, I removed the fan from the heatsink, removed the sticker from the bottom and added a drop of sewing machine oil to the axle. Sticker back on, fan screwed on the heatsink again, it&#8217;s now quiter than ever (even than when it was brand new). I&#8217;m very happy&#8230; :)
+Well, it happened again. This time however, I did NOT feel like taking the whole computer in just to have the motherboard replaced (because of a FAN!); it’s a good vendor, but they’re kind of strict with their guarantee conditions. So, I removed the fan from the heatsink, removed the sticker from the bottom and added a drop of sewing machine oil to the axle. Sticker back on, fan screwed on the heatsink again, it’s now quiter than ever (even than when it was brand new). I’m very happy… :)
