--- a/content/posts/2002-01-27-an-old-gem.md
+++ b/content/posts/2002-01-27-an-old-gem.md
@@ -8,4 +8,4 @@ categories:
   - Uncategorized
 
 ---
-I rediscovered a very old favourite in one of the SF short-story collections that I had bought at a local second-hand bookshop. Find and read &#8220;Specialist&#8221; by Robert Sheckley. Published in 1953, this story will remain timeless.
+I rediscovered a very old favourite in one of the SF short-story collections that I had bought at a local second-hand bookshop. Find and read “Specialist” by Robert Sheckley. Published in 1953, this story will remain timeless.
