--- a/content/posts/2002-02-08-32.md
+++ b/content/posts/2002-02-08-32.md
@@ -10,6 +10,6 @@ categories:
 ---
 [Rudolph][1] has arrived!
 
-I&#8217;ve been as sick as a dog these past few days. Your standard MoFo winter cold, but then with a baseball-bat and sneakers. It seems to have subsided quite quickly, probably partly due to the megadoses of vitamins I have been taking and the 10 hours of sleep every night. I actually did not have time for this, as I&#8217;m attending a mathematical morphology course by the likes of Rein van den Boomgaard, Lucas van Vliet, Henk Heijmans and Pierre Soille. If you know anything about morphology, you&#8217;ll know that these boys represent a serious chunk of research and innovation in the field.
+I’ve been as sick as a dog these past few days. Your standard MoFo winter cold, but then with a baseball-bat and sneakers. It seems to have subsided quite quickly, probably partly due to the megadoses of vitamins I have been taking and the 10 hours of sleep every night. I actually did not have time for this, as I’m attending a mathematical morphology course by the likes of Rein van den Boomgaard, Lucas van Vliet, Henk Heijmans and Pierre Soille. If you know anything about morphology, you’ll know that these boys represent a serious chunk of research and innovation in the field.
 
  [1]: http://rvdmerwe.livejournal.com/
