--- a/content/posts/2002-03-18-damnit.md
+++ b/content/posts/2002-03-18-damnit.md
@@ -8,6 +8,6 @@ categories:
   - Uncategorized
 
 ---
-Dutch weather is a bitch. If you have to cycle for 10km in Dutch weather, it&#8217;s a hoary bitch in a particularly bad mood. I don&#8217;t know how these people remain so friendly. I&#8217;m turning into a [Bastard][1]&#8230;
+Dutch weather is a bitch. If you have to cycle for 10km in Dutch weather, it’s a hoary bitch in a particularly bad mood. I don’t know how these people remain so friendly. I’m turning into a [Bastard][1]…
 
  [1]: http://www.arrogantbastard.com/index2.html
