--- a/content/posts/2002-08-05-76.md
+++ b/content/posts/2002-08-05-76.md
@@ -8,10 +8,10 @@ categories:
   - Uncategorized
 
 ---
-We went to KÃ¶ln (Cologne, yeah?) this weekend. The Dom is incredible, but I guess that&#8217;s what you get if you spend a few hundred years constructing a masterpiece. The Cathedral and the Bazaar? The Cathedral wins, hands down&#8230;
+We went to KÃ¶ln (Cologne, yeah?) this weekend. The Dom is incredible, but I guess that’s what you get if you spend a few hundred years constructing a masterpiece. The Cathedral and the Bazaar? The Cathedral wins, hands down…
 
 Sipping KÃ¶lsch on the bank of the Rhine in the summer sun is also an activity that I can highly recommend. :)
 
-I managed to update [my laptop page][1] as things have been moving quite fast on the DRI front. My kludge idea has been reworked/redone by Michel DÃ¤nzer and it is now actually about ready for prime-time. XFree86 can now seamlessly drop back into software rendering if it can&#8217;t regain DRI resources after a VT switch.
+I managed to update [my laptop page][1] as things have been moving quite fast on the DRI front. My kludge idea has been reworked/redone by Michel DÃ¤nzer and it is now actually about ready for prime-time. XFree86 can now seamlessly drop back into software rendering if it can’t regain DRI resources after a VT switch.
 
  [1]: http://cpbotha.net/clevo5600/clevo5600_linux/
