Fix figure elements up to end of 2003

--- a/content/posts/2003-02-09-i-rule.md
+++ b/content/posts/2003-02-09-i-rule.md
@@ -8,8 +8,8 @@ categories:
   - Uncategorized
 
 ---
-After a few minutes of Perl \*ptooooey\* hacking, I&#8217;ve re-elevated myself back to the super-user that I am. I now have authoring permissions over all blogs on this system and won&#8217;t be able to lose them again.
+After a few minutes of Perl \*ptooooey\* hacking, I’ve re-elevated myself back to the super-user that I am. I now have authoring permissions over all blogs on this system and won’t be able to lose them again.
 
-If you&#8217;ve somehow lost authoring permissions on blogs in a Movable Type installation that you maintain, download and run [this script][1]. It will only work if you had permissions before and subsequently lost them. It won&#8217;t create these permissions from scratch. It&#8217;s left as an exercise for the reader to implement this last bit.
+If you’ve somehow lost authoring permissions on blogs in a Movable Type installation that you maintain, download and run [this script][1]. It will only work if you had permissions before and subsequently lost them. It won’t create these permissions from scratch. It’s left as an exercise for the reader to implement this last bit.
 
  [1]: http://cpbotha.net/thingies/grantperms
