--- a/content/posts/2003-03-10-knoppix.md
+++ b/content/posts/2003-03-10-knoppix.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-This weekend I gave [Knoppix][1] 3.1 a spin on my workstation. Knoppix is a complete [Debian][2]-based Linux distribution that runs directly from the CD. It&#8217;s a simple question of downloading the ISO, burning it and booting from it: a minute or so later you&#8217;re staring at a [KDE][3] 3.0 desktop and everything Just Works(tm).
+This weekend I gave [Knoppix][1] 3.1 a spin on my workstation. Knoppix is a complete [Debian][2]-based Linux distribution that runs directly from the CD. It’s a simple question of downloading the ISO, burning it and booting from it: a minute or so later you’re staring at a [KDE][3] 3.0 desktop and everything Just Works(tm).
 
 Knoppix is an impressive feat. There is an amazing selection of ready-to-run software on the CD, including [Open Office][4] 1.0.1, as much of KDE 3.0 as you can handle (including KDevelop) and much more. This is definitely my new rescue CD: hardcore system repare _in GUI style_.
 
