--- a/content/posts/2003-05-16-zombocom.md
+++ b/content/posts/2003-05-16-zombocom.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-Today [Paul][1] discovered [ZomboCom][2]. You can do anything at [ZomboCom][2]. [ZomboCom][2] is strangely comforting. Why can&#8217;t I stop staring at [ZomboCom][2]?
+Today [Paul][1] discovered [ZomboCom][2]. You can do anything at [ZomboCom][2]. [ZomboCom][2] is strangely comforting. Why can’t I stop staring at [ZomboCom][2]?
 
  [1]: http://cpbotha.net/weblogs/paul/
  [2]: http://www.zombo.com/
