--- a/content/posts/2003-08-20-sobig.md
+++ b/content/posts/2003-08-20-sobig.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-**Please** people, remove the W32.Sobig.F@mm worm from your infected Windows systems. It&#8217;s sending mail all over the place and it&#8217;s faking the from address. Click [here][1] to read about the worm and how to remove it. For the Dutch readers, [this][2] will also help.
+**Please** people, remove the W32.Sobig.F@mm worm from your infected Windows systems. It’s sending mail all over the place and it’s faking the from address. Click [here][1] to read about the worm and how to remove it. For the Dutch readers, [this][2] will also help.
 
  [1]: http://securityresponse.symantec.com/avcenter/venc/data/w32.sobig.f@mm.html
  [2]: http://www.virusalert.nl/?show=virus&id=547
