--- a/content/posts/2003-11-17-back-from-za-2003.md
+++ b/content/posts/2003-11-17-back-from-za-2003.md
@@ -8,8 +8,9 @@ categories:
   - Uncategorized
 
 ---
-What a lovely holiday&#8230; I got time to party with many of the friends, spend quality time with the family, drink many Windhoek Lagers and eat too much red meat. Unfortunately, I missed [Goof&#8217;s bachelors&#8217; party][1]. Next time! ;)
+What a lovely holiday… I got time to party with many of the friends, spend quality time with the family, drink many Windhoek Lagers and eat too much red meat. Unfortunately, I missed [Goof’s bachelors’ party][1]. Next time! ;)
 
-On a totally unrelated note, it seems my Tungsten E is working with Evolution 1.2.4, gnome-pilot DEBs from <http://www.madhack.com/debian> and some spit. The whole volatile combination seems to be dancing drunkily on the edge of a very sharp Minora blade though&#8230;
+On a totally unrelated note, it seems my Tungsten E is working with Evolution 1.2.4, gnome-pilot DEBs from <http: debian="" www.madhack.com=""> and some spit. The whole volatile combination seems to be dancing drunkily on the edge of a very sharp Minora blade though…
 
  [1]: http://cpbotha.net/weblogs/goof/archives/001000.html
+</http:>
