--- a/content/posts/2003-02-09-my-laptop.md
+++ b/content/posts/2003-02-09-my-laptop.md
@@ -10,7 +10,7 @@ categories:
 ---
 This is an [AnandTech review][1] of the Hypersonic Sonic Aviator 3.06GHz Pentium 4 laptop which is just another rebadge of the [Clevo][2] 5600. I bought mine (rebadged as a [Promedion][3]) a while back, but with a 2GHz P4 (Northwood) and a Radeon 7500 Mobility instead of a Radeon 9000 Mobility.
 
-In case you didn&#8217;t know, this laptop [does Linux][4].
+In case you didn’t know, this laptop [does Linux][4].
 
  [1]: http://www.anandtech.com/mobile/showdoc.html?i=1765
  [2]: http://www.clevo.com.tw/
