--- a/content/posts/2003-02-19-i-rule-2.md
+++ b/content/posts/2003-02-19-i-rule-2.md
@@ -10,7 +10,7 @@ categories:
 ---
 I spend quite a chunk of my time hacking on [VTK][1] (the Visualization ToolKit), one of the better examples of open source.
 
-I&#8217;m particularly proud of the fix I made today though, as it&#8217;s quite deep in the VTK object hierarchy. Shows you how much it can help to construct an isolated test case that breaks something before you start debugging. First I present [the problem][2] along with my test case (I ran into the problem whilst hacking on large GUI+VTK project) and then, after considerable amounts of Rooibos tea, [the solution][3].
+I’m particularly proud of the fix I made today though, as it’s quite deep in the VTK object hierarchy. Shows you how much it can help to construct an isolated test case that breaks something before you start debugging. First I present [the problem][2] along with my test case (I ran into the problem whilst hacking on large GUI+VTK project) and then, after considerable amounts of Rooibos tea, [the solution][3].
 
 This one-liner fix represents an extremely hairy problem: it was hidden somewhere in the 1.2 MILLION lines of code that constitute VTK.
 
