--- a/content/posts/2003-03-02-odd-bits.md
+++ b/content/posts/2003-03-02-odd-bits.md
@@ -10,7 +10,7 @@ categories:
 ---
 [This link][1] has some very interesting tidbits that could help you to speed up your Python code.
 
-In other news, I&#8217;ve updated the binary Radeon DRI suspend/resume-capable drivers on my [dri_resume][2] page.
+In other news, I’ve updated the binary Radeon DRI suspend/resume-capable drivers on my [dri_resume][2] page.
 
  [1]: http://manatee.mojam.com/~skip/python/fastpython.html
  [2]: http://cpbotha.net/dri_resume.html
