--- a/content/posts/2003-03-24-bias.md
+++ b/content/posts/2003-03-24-bias.md
@@ -8,7 +8,7 @@ categories:
   - Uncategorized
 
 ---
-Yes children, the word of the day is &#8220;BIAS&#8221;. [This Reuters article][1] reports that a chemical arms factory _might have been_ found near Najaf. Fortunately, the article also tells us that this news comes to us courtesy of Fox News and the Jerusalem Post. I don&#8217;t have to say anything concerning the alignment of the Jerusalem Post with regards to Iraq, but for those of you who might not know, Fox News is unashamedly and quite subjectively pro-war and very much right-wing: in short, a [propaganda machine][2] that&#8217;s programming empty American heads with rubbish.
+Yes children, the word of the day is “BIAS”. [This Reuters article][1] reports that a chemical arms factory _might have been_ found near Najaf. Fortunately, the article also tells us that this news comes to us courtesy of Fox News and the Jerusalem Post. I don’t have to say anything concerning the alignment of the Jerusalem Post with regards to Iraq, but for those of you who might not know, Fox News is unashamedly and quite subjectively pro-war and very much right-wing: in short, a [propaganda machine][2] that’s programming empty American heads with rubbish.
 
 If a real chemical arms factory were discovered in Iraq, I would have no problem dealing with that, but please, let the news at least be delivered in a somewhat less sensationalist and objective fashion.
 
