--- a/content/posts/2004-05-26-laptop-no-2.md
+++ b/content/posts/2004-05-26-laptop-no-2.md
@@ -10,9 +10,9 @@ tags:
   - new computer
 
 ---
-Once again, I&#8217;ve succumbed to my inner laptop-fanboy and ordered a new laptop. The previous one is now two years old and thoroughly out of date. Add to that its 3.7kg weight (on a good day) and its battery life which is somewhere between 1 and 1.5 hours (on that same good day), and it&#8217;s obvious that it&#8217;s time for a new one. Or so I rationalise, at least.
+Once again, I’ve succumbed to my inner laptop-fanboy and ordered a new laptop. The previous one is now two years old and thoroughly out of date. Add to that its 3.7kg weight (on a good day) and its battery life which is somewhere between 1 and 1.5 hours (on that same good day), and it’s obvious that it’s time for a new one. Or so I rationalise, at least.
 
-After months of searching and researching, I settled on the HP NC6000. See the [ZDNet review][1] and the [Ars Technica review][2]. It&#8217;s a goodie. Especially pay attention to the **5 hours and 42 minutes battery life** under MobileMark 2002 productivity load (i.e. running Office, Mozilla, Virus scanner, Adobe Photoshop and Macromedia Flash and doing stuff the whole time) and the more than luggable 2.3kg. To make it all that much sweeter, HP decided to equip it with an ATI Radeon Mobility 9600: that means I&#8217;ll be able to play around with those neato shader thingies.
+After months of searching and researching, I settled on the HP NC6000. See the [ZDNet review][1] and the [Ars Technica review][2]. It’s a goodie. Especially pay attention to the **5 hours and 42 minutes battery life** under MobileMark 2002 productivity load (i.e. running Office, Mozilla, Virus scanner, Adobe Photoshop and Macromedia Flash and doing stuff the whole time) and the more than luggable 2.3kg. To make it all that much sweeter, HP decided to equip it with an ATI Radeon Mobility 9600: that means I’ll be able to play around with those neato shader thingies.
 
 I ordered the 1.6GHz Banias model with a gig of 333MHz DDR ram. Oh yes, I got the basic docking station as well. Whooohooo!
 
