Update figures in posts from 2005

--- a/content/posts/2005-08-05-moblog-test-538.md
+++ b/content/posts/2005-08-05-moblog-test-538.md
@@ -8,8 +8,8 @@ categories:
   - Uncategorized
 
 ---
-Coffee on a rainy summer&#8217;s day.
+Coffee on a rainy summer’s day.
 
-<a href="http://visualisation.tudelft.nl/~cpbotha/moblog_pics/20050805-1717-56-69.jpg" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title="">![][1]</a>
+<a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="http://visualisation.tudelft.nl/~cpbotha/moblog_pics/20050805-1717-56-69.jpg" title="">![][1]</a>
 
  [1]: http://visualisation.tudelft.nl/~cpbotha/moblog_pics/20050805-1717-56-69-thumb.jpg
