--- a/content/posts/2005-10-23-vis2005-day-1.md
+++ b/content/posts/2005-10-23-vis2005-day-1.md
@@ -8,13 +8,13 @@ categories:
   - Uncategorized
 
 ---
-Whooohoooo! We&#8217;re[1] here at the [IEEE Visualization 2005 conference][1] in the Minneapolis Hilton.
+Whooohoooo! We’re[1] here at the [IEEE Visualization 2005 conference][1] in the Minneapolis Hilton.
 
-It being Sunday, we&#8217;re nursing our 7-hour jet lag and relaxing with a light tutorial, [General Purpose Computing on GPUs][2]. The team presenting this tutorial are some of the heavy-weights in the field and so far it&#8217;s quite interesting.
+It being Sunday, we’re nursing our 7-hour jet lag and relaxing with a light tutorial, [General Purpose Computing on GPUs][2]. The team presenting this tutorial are some of the heavy-weights in the field and so far it’s quite interesting.
 
-During the next few days, I&#8217;ll _try_ and post an update or two. Rubbing shoulders with the Visualisation world&#8217;s _Who&#8217;s Who_ obviously takes precedence over abusing the conference WLAN to blog like a nerd.
+During the next few days, I’ll _try_ and post an update or two. Rubbing shoulders with the Visualisation world’s _Who’s Who_ obviously takes precedence over abusing the conference WLAN to blog like a nerd.
 
-[1] &#8220;We&#8221; refers to [Frits][3], [Jorik][4] and [me][5].
+[1] “We” refers to [Frits][3], [Jorik][4] and [me][5].
 
  [1]: http://http://vis.computer.org/vis2005/
  [2]: http://graphics.cs.ucdavis.edu/~lefohn/work/gpgpuVis05/
