--- a/content/posts/2005-03-26-new-a64-server.md
+++ b/content/posts/2005-03-26-new-a64-server.md
@@ -12,17 +12,17 @@ I finally caved in and upgraded my sweet little Celeron 300A Linux server.
 
 Yesterday, after a brief planning phase, [Paul][1] and I jumped into his souped up Toyota Corolla and tore, [Ronin][2]-style, through the streets of Delft on our way to [Informatique][3] in Bergschenhoek. Wallets considerably lighter, we returned with several items of brand new hardware.
 
-My little Celeron server has now been upgraded into a somewhat less timid Athlon 64 2800+ Newcastle core (130nm) on an [Asus K8V-X motherboard][4] with 512 MB PC3200 DDR ram. I&#8217;ve also installed [CentOS 4.0 i386][5], a Redhat Enterprise Linux clone, to better run Oracle. I&#8217;m sticking to i386 for now, I&#8217;ll try amd64 Linux when I&#8217;m really bored.
+My little Celeron server has now been upgraded into a somewhat less timid Athlon 64 2800+ Newcastle core (130nm) on an [Asus K8V-X motherboard][4] with 512 MB PC3200 DDR ram. I’ve also installed [CentOS 4.0 i386][5], a Redhat Enterprise Linux clone, to better run Oracle. I’m sticking to i386 for now, I’ll try amd64 Linux when I’m really bored.
 
-The neat thing is that this combination can do [Cool&#8217;n&#8217;Quiet][6], so when the server is not actually doing stuff, the processor clock drops to 1000 MHz from its usual 1800 MHz. This results in a significant drop in thermal design power (TDP): at 1800 MHz the TDP is 89W and at 1000 MHz it&#8217;s a very economical 22W, which is almost the same as the old Celeron 300!! AMD measures the TDP at worst case, i.e. a case temperature of 70 degrees Celsius and the maximum possible current draw. See [this datasheet][7] for more details. To set this up on Linux, the following commands have to be run at startup:
+The neat thing is that this combination can do [Cool’n’Quiet][6], so when the server is not actually doing stuff, the processor clock drops to 1000 MHz from its usual 1800 MHz. This results in a significant drop in thermal design power (TDP): at 1800 MHz the TDP is 89W and at 1000 MHz it’s a very economical 22W, which is almost the same as the old Celeron 300!! AMD measures the TDP at worst case, i.e. a case temperature of 70 degrees Celsius and the maximum possible current draw. See [this datasheet][7] for more details. To set this up on Linux, the following commands have to be run at startup:
   
-`<br />
-modprobe powernow_k8<br />
-modprobe cpufreq_ondemand<br />
-echo -n "ondemand" > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor<br />
+`<br/>
+modprobe powernow_k8<br/>
+modprobe cpufreq_ondemand<br/>
+echo -n "ondemand" > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor<br/>
 ` 
 
-It doesn&#8217;t look like I can change processor fan speed on this specific motherboard; I believe the [K8V Deluxe][8] does make it possible. The idle processor temperature is 25 degrees celsius, so it would have been nice to slow down the fan some more. The system is pleasantly quiet as it is (there&#8217;s a Nexus PSU in there, [as you will recall][9]), but the CPU fan is audible.
+It doesn’t look like I can change processor fan speed on this specific motherboard; I believe the [K8V Deluxe][8] does make it possible. The idle processor temperature is 25 degrees celsius, so it would have been nice to slow down the fan some more. The system is pleasantly quiet as it is (there’s a Nexus PSU in there, [as you will recall][9]), but the CPU fan is audible.
 
  [1]: http://pwdebruin.net/?q=blog
  [2]: http://www.imdb.com/title/tt0122690/
