Update figures in all 2008 posts

--- a/content/posts/2008-03-10-im-in-love.md
+++ b/content/posts/2008-03-10-im-in-love.md
@@ -31,10 +31,9 @@ now have to start plotting nefarious plans in order to be able to come back in
 the near future and spend a significant amount of time getting to know her
 better.
 
-<a href="/wp-content/uploads/2008/03/vienna_josefstadt_night.png" title="" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption=""></a>
-
+<a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="/wp-content/uploads/2008/03/vienna_josefstadt_night.png" title=""></a>
 <p style="text-align: center">
-  <a href="/wp-content/uploads/2008/03/vienna_josefstadt_night.png" title="" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption=""><img src="/wp-content/uploads/2008/03/vienna_josefstadt_night.png" alt="vienna_josefstadt_night.png" height="323" width="429" /></a>
+<a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="/wp-content/uploads/2008/03/vienna_josefstadt_night.png" title=""><img alt="vienna_josefstadt_night.png" height="323" src="/wp-content/uploads/2008/03/vienna_josefstadt_night.png" width="429"/></a>
 </p>
 
  [1]: http://medvis.org/2008/03/09/ecr-2008/ "Link to medvis ecr2008 posting"
