--- a/content/posts/2008-01-08-lust.md
+++ b/content/posts/2008-01-08-lust.md
@@ -17,13 +17,13 @@ More or less every two years, I am overcome by uncontrollable lust.
 
 Lust for some fresh computing hardware, that is.  YEAH!
 
-1.5 years ago it was the [HP NC8430 laptop][1], 2 years before that my beloved [HP NC6000][2], and slightly short of two years before that the infinitely heavy [stoeptegel-1][3] (I still think there&#8217;s a mini-blackhole in there somewhere).
+1.5 years ago it was the [HP NC8430 laptop][1], 2 years before that my beloved [HP NC6000][2], and slightly short of two years before that the infinitely heavy [stoeptegel-1][3] (I still think there’s a mini-blackhole in there somewhere).
 
-It&#8217;s almost _that time_ again, so I have begun shopping around (in WAB time, of course) for an affordable yet absurdly fast desktop for use at home, in my secret laboratory.  Oh wait, there&#8217;s no secret laboratory.  Really.
+It’s almost _that time_ again, so I have begun shopping around (in WAB time, of course) for an affordable yet absurdly fast desktop for use at home, in my secret laboratory.  Oh wait, there’s no secret laboratory.  Really.
 
 I was planning to get something with the [Intel Core 2 Quad Q6600][4] (4 cores at 2.4 GHz, 2 x MB L2 cache, 1066 MHz quad-clocked FSB), but [Jorik][5] fortunately recommended (thanks!) waiting for the soon-to-be-available Penryn 45nm quad cores.   Seems [Intel has announced][6] the definite release of 16 new 45nm CPUs at the CES, including the similarly price-ranged but far more desirable [Quad Q9450][7] (4 cores at 2.66 GHz, 2 x 6MB L2 cache, 1333 MHz quad-clocked FSB).
 
-Throw 4 GB of DDR2 RAM, a Hitachi P7K500 half terabyte hard drive, a passively cooled GeForce 8600 GT 512MB and some 64-bit Ubuntu goodness at it, and you have some serious workstation action that doesn&#8217;t even leave you half-destitute!
+Throw 4 GB of DDR2 RAM, a Hitachi P7K500 half terabyte hard drive, a passively cooled GeForce 8600 GT 512MB and some 64-bit Ubuntu goodness at it, and you have some serious workstation action that doesn’t even leave you half-destitute!
 
  [1]: http://cpbotha.net/2006/07/22/new-new-laptop-laptop/ "Link to blog posting about my NC8430 laptop"
  [2]: http://cpbotha.net/2004/05/26/laptop-no-2/ "Link to NC6000 blog posting."
