--- a/content/posts/2008-01-08-soulwax.md
+++ b/content/posts/2008-01-08-soulwax.md
@@ -19,7 +19,7 @@ Last year I acquired this:
 [][1]
 
 <p style="text-align: center">
-  <a href="http://picasaweb.google.com/cpbotha/Misc/photo#5153018499801037154"><img src="http://lh6.google.com/cpbotha/R4MzBhGoOWI/AAAAAAAAChU/V8ZENTEt1Vg/s400/soulwax_20080104_ticket.jpg" /></a>
+<a href="http://picasaweb.google.com/cpbotha/Misc/photo#5153018499801037154"><img src="http://lh6.google.com/cpbotha/R4MzBhGoOWI/AAAAAAAAChU/V8ZENTEt1Vg/s400/soulwax_20080104_ticket.jpg"/></a>
 </p>
 
 So I could go here:
@@ -27,14 +27,14 @@ So I could go here:
 [][2]
 
 <p style="text-align: center">
-  <a href="http://picasaweb.google.com/cpbotha/Misc/photo#5153018495506069842"><img src="http://lh5.google.com/cpbotha/R4MzBRGoOVI/AAAAAAAAChM/FOuIgji3NCg/s400/soulwax_20080104_crowdshoot_miletic.jpg" /></a>
+<a href="http://picasaweb.google.com/cpbotha/Misc/photo#5153018495506069842"><img src="http://lh5.google.com/cpbotha/R4MzBRGoOVI/AAAAAAAAChM/FOuIgji3NCg/s400/soulwax_20080104_crowdshoot_miletic.jpg"/></a>
 </p>
 
-&#8230; with some _exceptionally_ cool individuals.
+… with some _exceptionally_ cool individuals.
 
-Thanks to one of these individuals who has developed the amazing ability to stop time in his close proximity and, as if that wasn&#8217;t enough, to possess a pair of the coolest spectacles this side of the equator, you should be able to find me on the photo to his left.
+Thanks to one of these individuals who has developed the amazing ability to stop time in his close proximity and, as if that wasn’t enough, to possess a pair of the coolest spectacles this side of the equator, you should be able to find me on the photo to his left.
 
-Take a whiff of [Soulwax / 2 Many DJs][3] live by clicking <a href="http://youtube.com/watch?v=_Urig4OpnhY" data-rel="lightbox-video-0" title="Soulwax Rocket Ride live Youtube video">here</a> (the ROCKET RIDING fun starts at 2:05), <a href="http://youtube.com/watch?v=w-PqYy45g8k" data-rel="lightbox-video-1" title="Soulwax live in Paradiso (youtube, part1)">here</a> or <a href="http://youtube.com/watch?v=nEK_h9T6DW8" data-rel="lightbox-video-2" title="Soulwax live in Paradiso (youtube, part2)">here</a>.
+Take a whiff of [Soulwax / 2 Many DJs][3] live by clicking <a data-rel="lightbox-video-0" href="http://youtube.com/watch?v=_Urig4OpnhY" title="Soulwax Rocket Ride live Youtube video">here</a> (the ROCKET RIDING fun starts at 2:05), <a data-rel="lightbox-video-1" href="http://youtube.com/watch?v=w-PqYy45g8k" title="Soulwax live in Paradiso (youtube, part1)">here</a> or <a data-rel="lightbox-video-2" href="http://youtube.com/watch?v=nEK_h9T6DW8" title="Soulwax live in Paradiso (youtube, part2)">here</a>.
 
  [1]: http://picasaweb.google.com/cpbotha/Misc/photo#5153018499801037154
  [2]: http://picasaweb.google.com/cpbotha/Misc/photo#5153018495506069842
