--- a/content/posts/2009-06-14-eurovis-2009.md
+++ b/content/posts/2009-06-14-eurovis-2009.md
@@ -17,11 +17,11 @@ tags:
 ---
 On Friday I returned, by jet-powered flying device, from Yet Another Visit To Berlin.  :)  Berlin still exudes cool like nothing else, _and_ I got to spend my time there in the company of more than 190 other Visualisation people, many of whom have become friends over the past years.  The three days were filled with presentations, but more importantly (sorry presenters!) good conversations, new friends (contacts?) and not too much sleep.  This was, without a doubt, my best [Eurovis conference][1] so far!
 
-The conference was held in the historically and scientifically significant [Harnack House][2], located in the academia-dominated Dahlem district of Berlin.  For a time, the Harnack House was the home of brilliant German scientists such as Einstein, the guy who invented the dish-washer (as you all know).  The unique setting definitely contributed to the particularly unique feel of this year&#8217;s event.
+The conference was held in the historically and scientifically significant [Harnack House][2], located in the academia-dominated Dahlem district of Berlin.  For a time, the Harnack House was the home of brilliant German scientists such as Einstein, the guy who invented the dish-washer (as you all know).  The unique setting definitely contributed to the particularly unique feel of this year’s event.
 
 [Stef][3] did a sterling job presenting our paper on the scientific comparison of Smurfs (will add link to paper later):
 
-<a href="http://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title=""><img data-attachment-id="525" data-permalink="https://cpbotha.net/2009/06/14/eurovis-2009/stef_smurfs/" data-orig-file="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg" data-orig-size="1024,768" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;3.2&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;E71&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;1244649720&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;4.9&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;}" data-image-title="stef_smurfs" data-image-description="" data-medium-file="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs-300x225.jpg" data-large-file="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg" class="alignnone size-medium wp-image-525" title="stef_smurfs" src="http://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs-300x225.jpg" alt="stef_smurfs" width="300" height="225" srcset="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs-300x225.jpg 300w, https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg 1024w" sizes="(max-width: 300px) 85vw, 300px" /></a>
+<a data-rel="lightbox-image-0" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg" title=""><img alt="stef_smurfs" class="alignnone size-medium wp-image-525" data-attachment-id="525" data-comments-opened="1" data-image-description="" data-image-meta='{"aperture":"3.2","credit":"","camera":"E71","caption":"","created_timestamp":"1244649720","copyright":"","focal_length":"4.9","iso":"0","shutter_speed":"0","title":""}' data-image-title="stef_smurfs" data-large-file="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg" data-medium-file="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs-300x225.jpg" data-orig-file="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg" data-orig-size="1024,768" data-permalink="https://cpbotha.net/2009/06/14/eurovis-2009/stef_smurfs/" height="225" sizes="(max-width: 300px) 85vw, 300px" src="http://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs-300x225.jpg" srcset="https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs-300x225.jpg 300w, https://cpbotha.net/wp-content/uploads/2009/06/stef_smurfs.jpg 1024w" title="stef_smurfs" width="300"/></a>
 
 In spite of the importance of Smurf comparison, the best paper award was awarded to our friends from Swansea for their work on the [Visualisation of Sensor Data from Animal Movement][4]!  Remember to keep an eye out for our soon-to-appear InfoVis 2009 paper on the same topic, in cooperation with them.
 
@@ -30,11 +30,11 @@ Other papers / presentations that somehow stuck with me are (this is mostly due 
   * [Instant Volume Visualization using Maximum Intensity Difference Accumulation][5] by Bruckner and Gröller (Vienna): By a continuous combination of DVR and MIP, this technique overcomes problems of both techniques.  Minimal futzing with transfer functions, better depth than MIP, 35% improvement!
   * Map Displays for the Analysis of Scalar Data on Cerebral Aneurysm Surfaces (no link available yet) by Neugebauer, Gasteiger, Beuing, Diehl, Skalej and Preim ([Magdeburg][6]): This is a great example of combining 3D with 2D to effectively visually represent complex simulation data.  Also, much like our shoulder work, this is a text book example of the medical visualisation pipeline (acquisition, image processing, simulation / modelling, visualisation / interaction, evaluation).
 
-The [capstone][7] on Friday by [Helmut Grubmüller][8] on _Watching Biomolecular Nanomachines at Work_ was inspiring.  Besides the fact that he seems to publish papers with beautiful visualisations in Science every second week, he&#8217;s a fantastic speaker who was able to impress on us his wonder at these almost unfathomably tiny protein-component machines, with their rotating axes and all.  Here&#8217;s another bad mobile phone photo of the man in action:
+The [capstone][7] on Friday by [Helmut Grubmüller][8] on _Watching Biomolecular Nanomachines at Work_ was inspiring.  Besides the fact that he seems to publish papers with beautiful visualisations in Science every second week, he’s a fantastic speaker who was able to impress on us his wonder at these almost unfathomably tiny protein-component machines, with their rotating axes and all.  Here’s another bad mobile phone photo of the man in action:
 
-<a style="text-decoration: none;" href="http://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg" data-rel="lightbox-image-1" data-rl_title="" data-rl_caption="" title=""><img data-attachment-id="527" data-permalink="https://cpbotha.net/2009/06/14/eurovis-2009/grubmueller/" data-orig-file="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg" data-orig-size="1024,768" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;3.2&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;E71&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;1244833330&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;4.9&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;}" data-image-title="grubmueller" data-image-description="" data-medium-file="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller-300x225.jpg" data-large-file="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg" class="alignnone size-medium wp-image-527" title="grubmueller" src="http://cpbotha.net/wp-content/uploads/2009/06/grubmueller-300x225.jpg" alt="grubmueller" width="300" height="225" srcset="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller-300x225.jpg 300w, https://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg 1024w" sizes="(max-width: 300px) 85vw, 300px" /></a>
+<a data-rel="lightbox-image-1" data-rl_caption="" data-rl_title="" href="http://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg" style="text-decoration: none;" title=""><img alt="grubmueller" class="alignnone size-medium wp-image-527" data-attachment-id="527" data-comments-opened="1" data-image-description="" data-image-meta='{"aperture":"3.2","credit":"","camera":"E71","caption":"","created_timestamp":"1244833330","copyright":"","focal_length":"4.9","iso":"0","shutter_speed":"0","title":""}' data-image-title="grubmueller" data-large-file="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg" data-medium-file="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller-300x225.jpg" data-orig-file="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg" data-orig-size="1024,768" data-permalink="https://cpbotha.net/2009/06/14/eurovis-2009/grubmueller/" height="225" sizes="(max-width: 300px) 85vw, 300px" src="http://cpbotha.net/wp-content/uploads/2009/06/grubmueller-300x225.jpg" srcset="https://cpbotha.net/wp-content/uploads/2009/06/grubmueller-300x225.jpg 300w, https://cpbotha.net/wp-content/uploads/2009/06/grubmueller.jpg 1024w" title="grubmueller" width="300"/></a>
 
-P.S. Of course our paper wasn&#8217;t _really_ on Smurf comparison.
+P.S. Of course our paper wasn’t _really_ on Smurf comparison.
 
 P.P.S. [Petra Isenberg][9] (winner of the 3d best paper award!) and Christopher Collins made [a really cool and detailed write-up of Eurovis 2009][10] (slightly infovis-biased) at Information Aesthetics.
 
