Update figure sections in all 2011 posts

--- a/content/posts/2011-06-26-eurovis-2011.md
+++ b/content/posts/2011-06-26-eurovis-2011.md
@@ -16,14 +16,13 @@ tags:
   - visualization
 
 ---
-I&#8217;ve written before about EuroVis, the most important European scientific conference on visualisation. In [2009, it took place in Berlin][1], in [2010 it was in Bordeaux][2], and, an a surprise non-twist of alliteration, the **2011 edition was held in Bergen, Norway.** With 216 attendees and a practically perfect organization, this year&#8217;s edition has been described as the biggest and the best EuroVis ever. In a bid to save some time (I still owe you a mega-edition of the Weekly (actually Monthly) Head Voices), I&#8217;m going to give my biased account in bullet-list form:
+I’ve written before about EuroVis, the most important European scientific conference on visualisation. In [2009, it took place in Berlin][1], in [2010 it was in Bordeaux][2], and, an a surprise non-twist of alliteration, the **2011 edition was held in Bergen, Norway.** With 216 attendees and a practically perfect organization, this year’s edition has been described as the biggest and the best EuroVis ever. In a bid to save some time (I still owe you a mega-edition of the Weekly (actually Monthly) Head Voices), I’m going to give my biased account in bullet-list form:
 
-  * On Tuesday evening, we were welcomed by the very charismatic vice mayor of Bergen in the Tårnsalen of the Lysverket building of the Bergen Art Museum. It seems the photo I took of the inside of the art deco tower, built in 1938, is quite a popular shot. The food was divine, thank you very much.<figure id="attachment_1406" aria-describedby="caption-attachment-1406" style="width: 300px" class="wp-caption aligncenter"><a href="http://cpbotha.net/wp-content/uploads/2011/06/tarnsalen.jpg" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title="">
+  * On Tuesday evening, we were welcomed by the very charismatic vice mayor of Bergen in the Tårnsalen of the Lysverket building of the Bergen Art Museum. It seems the photo I took of the inside of the art deco tower, built in 1938, is quite a popular shot. The food was divine, thank you very much.
+  {{< figure src="/wp-content/uploads/2011/06/tarnsalen-1024x612.jpg" link="/wp-content/uploads/2011/06/tarnsalen.jpg" caption="Art Deco tower from the inside in the Tårnsalen, Lysverket.">}} 
 
-<img data-attachment-id="1406" data-permalink="https://cpbotha.net/2011/06/26/eurovis-2011/tarnsalen/" data-orig-file="https://cpbotha.net/wp-content/uploads/2011/06/tarnsalen.jpg" data-orig-size="1280,766" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;HTC Vision&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;1306867276&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;3.53&quot;,&quot;iso&quot;:&quot;74&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;}" data-image-title="tarnsalen" data-image-description="" data-medium-file="https://cpbotha.net/wp-content/uploads/2011/06/tarnsalen-300x179.jpg" data-large-file="https://cpbotha.net/wp-content/uploads/2011/06/tarnsalen-1024x612.jpg" class="size-medium wp-image-1406" title="tarnsalen" src="http://cpbotha.net/wp-content/uploads/2011/06/tarnsalen-300x179.jpg" alt="" width="300" height="179" srcset="https://cpbotha.net/wp-content/uploads/2011/06/tarnsalen-300x179.jpg 300w, https://cpbotha.net/wp-content/uploads/2011/06/tarnsalen-1024x612.jpg 1024w, https://cpbotha.net/wp-content/uploads/2011/06/tarnsalen.jpg 1280w" sizes="(max-width: 300px) 85vw, 300px" /></a><figcaption id="caption-attachment-1406" class="wp-caption-text">Art Deco tower from the inside in the Tårnsalen, Lysverket.</figcaption></figure> 
-
-  * The next morning, during the conference opening, the following Bergen (rainiest city in Europe) joke was told: _A visitor asks a local boy in exasperation &#8220;Does it rain like this all the time?&#8221; and the little boy answers &#8220;I don&#8217;t know, I&#8217;m only 12 years old!&#8221;_.
-  * The [conference keynote][3] was given by [Scott McCloud][4], American cartoonist and comic theorist, on aspects of visual communication. This was most probably the best presentation I&#8217;ve ever had the privilege of experiencing. Besides brilliant oratorship, his slides are somehow more a visual stream of consciousness affair than discrete quanta of information. When I grow up, I&#8217;m going to present like that.
+  * The next morning, during the conference opening, the following Bergen (rainiest city in Europe) joke was told: _A visitor asks a local boy in exasperation “Does it rain like this all the time?” and the little boy answers “I don’t know, I’m only 12 years old!”_.
+  * The [conference keynote][3] was given by [Scott McCloud][4], American cartoonist and comic theorist, on aspects of visual communication. This was most probably the best presentation I’ve ever had the privilege of experiencing. Besides brilliant oratorship, his slides are somehow more a visual stream of consciousness affair than discrete quanta of information. When I grow up, I’m going to present like that.
 
 As per usual, I get to award the **Weekly Head Voices Best Paper awards**, and they go to the following papers:
 
@@ -40,12 +39,12 @@ The slightly less prestigious EuroVis 2011 Best Paper awards went to:
 The rest of the conference featured the following bullets:
 
   * During the social event on Thursday evening, Frits Post (my boss), was elevated to the rank of Eurographics Honorary Fellow, recognizing his service to and standing in the visualisation community. Including this newest addition, there are only [five (5!) EG Honorary Fellows][9] in the world today. I am very proud!
-  * During the first session of the morning after the social event, I had the exquisite privilege of presenting the work of my Brazilian colleagues: [Piecewise Laplacian-based Projection for Interactive Data Exploration and Organization][10] by Fernando V. Paulovich, Danilo M. Eler, Jorge Poco, Charl P. Botha, Rosane Minghim, Luis G. Nonato. I really do like presenting at events like these, and it&#8217;s been a while. Do read and cite the paper, it documents a practical way of reducing any set of high-dimensional data points to the visual space, and enabling interaction with those points on the visual space!
+  * During the first session of the morning after the social event, I had the exquisite privilege of presenting the work of my Brazilian colleagues: [Piecewise Laplacian-based Projection for Interactive Data Exploration and Organization][10] by Fernando V. Paulovich, Danilo M. Eler, Jorge Poco, Charl P. Botha, Rosane Minghim, Luis G. Nonato. I really do like presenting at events like these, and it’s been a while. Do read and cite the paper, it documents a practical way of reducing any set of high-dimensional data points to the visual space, and enabling interaction with those points on the visual space!
   * The [capstone of the conference][11] was presented by the legendary Prof. E. Gröller, also known by the whole community as _Meister_. In typical style, the title of his talk was only announced during the talk itself. The title was _The Haunted Swamps of Heuristics_. In this philosophical and visionary contribution, it was argued that algorithms and parameters are too deeply intertwined to focus only on the former, but that it was more important to study, in detail, the exact behaviour of the latter. More broadly speaking, we need to accept the fact that there is a great deal of uncertainty also in the parameter spaces of our algorithms, but that this uncertainty can and should be dealt with correctly.
 
 That thought-provoking capstone and this blog post will share the same concluding quote:
 
-> Doubt is not a pleasant condition, but certainty is absurd. &#8212; Voltaire / Gröller
+> Doubt is not a pleasant condition, but certainty is absurd. — Voltaire / Gröller
 
 I hope to see you in the comments below! You could also opt to click on my shiny new +1 button, or my slightly older but no less shiny retweet or facebook share buttons.
 
