--- a/content/posts/2011-01-16-.md
+++ b/content/posts/2011-01-16-.md
@@ -15,23 +15,20 @@ tags:
   - htc
 
 ---
-_**For my regular readers:** This post has an extremely high gadget-nerd index. To read it, you either have to be a nerd, or just love gadgets. **For the rest of you:** This review differs from other HTC Desire Z reviews because I&#8217;ve actually been using this phone as my only smartphone quite intensively, and because I&#8217;m writing up, in great depth, my iopinion as a gadget-toting ex-Linux-zealot computer science nerd. Take that engadget!_
+_**For my regular readers:** This post has an extremely high gadget-nerd index. To read it, you either have to be a nerd, or just love gadgets. **For the rest of you:** This review differs from other HTC Desire Z reviews because I’ve actually been using this phone as my only smartphone quite intensively, and because I’m writing up, in great depth, my iopinion as a gadget-toting ex-Linux-zealot computer science nerd. Take that engadget!_
 
-As many of you know, I was completely in love with my previous smartphone. Not surprising, seeing as the Nokia e71 is perfect, at least hardware-wise. However, partly due to Symbian (Nokia&#8217;s operating system) really dragging its heels (Nokia, does your mobile OS really have to feel like it teleported in from 1970?) and partly due to Android (Google&#8217;s mobile operating system) doing the exact opposite, I&#8217;d been not-so-patiently waiting for the right Android-running telephone to come along so I could start drinking the Google Kool-Aid.
+As many of you know, I was completely in love with my previous smartphone. Not surprising, seeing as the Nokia e71 is perfect, at least hardware-wise. However, partly due to Symbian (Nokia’s operating system) really dragging its heels (Nokia, does your mobile OS really have to feel like it teleported in from 1970?) and partly due to Android (Google’s mobile operating system) doing the exact opposite, I’d been not-so-patiently waiting for the right Android-running telephone to come along so I could start drinking the Google Kool-Aid.
 
-Enter the HTC Desire Z, known in the US as the T-Mobile G2, a micro-laptop with built-in mobile phone, or a flashlight with built-in laptop and phoning function, whichever you prefer:<figure id="attachment_1170" aria-describedby="caption-attachment-1170" style="width: 300px" class="wp-caption aligncenter"><a href="http://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples.jpg" data-rel="lightbox-image-0" data-rl_title="" data-rl_caption="" title="">
-
-<img data-attachment-id="1170" data-permalink="https://cpbotha.net/?attachment_id=1170" data-orig-file="https://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples.jpg" data-orig-size="852,479" data-comments-opened="1" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;}" data-image-title="htc_desirez_examples" data-image-description="" data-medium-file="https://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples-300x168.jpg" data-large-file="https://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples.jpg" class="size-medium wp-image-1170" title="htc_desirez_examples" src="http://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples-300x168.jpg" alt="" width="300" height="168" srcset="https://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples-300x168.jpg 300w, https://cpbotha.net/wp-content/uploads/2011/01/htc_desirez_examples.jpg 852w" sizes="(max-width: 300px) 85vw, 300px" /></a><figcaption id="caption-attachment-1170" class="wp-caption-text">Pretty pretty Desire Zs! (image courtesy of HTC)</figcaption></figure> 
-
+Enter the HTC Desire Z, known in the US as the T-Mobile G2, a micro-laptop with built-in mobile phone, or a flashlight with built-in laptop and phoning function, whichever you prefer:
+{{< figure src="/wp-content/uploads/2011/01/htc_desirez_examples.jpg" link="/wp-content/uploads/2011/01/htc_desirez_examples.jpg" caption="Pretty pretty Desire Zs! (image courtesy of HTC)">}}
 <p style="text-align: center;">
-  <p>
+<p>
     aoeu
   </p>
-  
-  <p>
+<p>
     Battery
   </p>
-  
-  <p>
+<p>
     Major gripes
   </p>
+</p>
