Update figures in 2013 posts

--- a/content/posts/2013-08-04-.md
+++ b/content/posts/2013-08-04-.md
@@ -9,6 +9,6 @@ categories:
   - Uncategorized
 
 ---
-In [my previous post][1], I tried to summarise the lessons I&#8217;d learnt so far in my new adventure as an independent visualization, imaging and software engineer.
+In [my previous post][1], I tried to summarise the lessons I’d learnt so far in my new adventure as an independent visualization, imaging and software engineer.
 
  [1]: http://cpbotha.net/2013/08/03/5-months-as-an-independent-engineer-lessons-learnt/ "5 months as an independent engineer: lessons learnt."
